--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -7,6 +7,7 @@
 
 
     <TextView
+        android:padding="10dp"
         android:id="@+id/main_breed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
 
 
     <TextView
+        android:padding="10dp"
         android:id="@+id/main_dogColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,6 +27,7 @@
 
 
     <TextView
+        android:padding="10dp"
         android:id="@+id/main_dogInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,6 +37,7 @@
 
 
     <TextView
+        android:padding="10dp"
         android:id="@+id/main_lifespan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
